Fixed rendering bug in Chrome: http://stackoverflow.com/questions/15152470/chrome-rendering-issue-fixed-position-anchor-with-ul-in-body

--- a/frontend/content/assets/css/header.css
+++ b/frontend/content/assets/css/header.css
@@ -18,11 +18,12 @@
   font-size: 14px;
   min-width: 20em;
   position: fixed;
-    -webkit-transition: all 500ms ease-in-out;
+  -webkit-transition: all 500ms ease-in-out;
   -moz-transition: all 500ms ease-in-out;
   -ms-transition: all 500ms ease-in-out;
   -o-transition: all 500ms ease-in-out;
   transition: all 500ms ease-in-out;
+  -webkit-transform: translateZ(0);
 }
 #header.transparent-header {
   background: transparent;
